cairo_draw_with_xlib should provide a non-NULL visual to callback. b=445250 r=vlad